templates/assets/water.css
/* ... */
h3 {
  color: #000;
  color: var(--text-bright)
}

@media (prefers-color-scheme:dark) {
  h3 {
    color: #fff;
    color: var(--text-bright)
  }
}

h4 {
  color: #000;
  color: var(--text-bright)
}

@media (prefers-color-scheme:dark) {
  h4 {
    color: #fff;
    color: var(--text-bright)
  }
}

h5 {
  color: #000;
  color: var(--text-bright)
}

@media (prefers-color-scheme:dark) {
  h5 {
    color: #fff;
    color: var(--text-bright)
  }
}

h6 {
  color: #000;
  color: var(--text-bright)
}

@media (prefers-color-scheme:dark) {
  h6 {
    color: #fff;
    color: var(--text-bright)
  }
}

strong {
  color: #000;
  color: var(--text-bright)
}

@media (prefers-color-scheme:dark) {
  strong {
    color: #fff;
    color: var(--text-bright)
  }
}

b,
h1,
h2,
h3,
h4,
h5,
h6,
strong,
th {
  font-weight: 600
}

q:after,
q:before {
  content: none
}

blockquote {
  border-left: 4px solid #418ed1;
  border-left: 4px solid var(--focus);
  margin: 1.5em 0;
  padding: .5em 1em;
  font-style: italic
}

@media (prefers-color-scheme:dark) {
  blockquote {
    border-left: 4px solid #418ed1;
    border-left: 4px solid var(--focus)
  }
}

q {
  border-left: 4px solid #418ed1;
  border-left: 4px solid var(--focus);
  margin: 1.5em 0;
  padding: .5em 1em;
  font-style: italic
}

@media (prefers-color-scheme:dark) {
  q {
    border-left: 4px solid #418ed1;
    border-left: 4px solid var(--focus)
  }
}

blockquote>footer {
  font-style: normal;
  border: 0
}

address,
blockquote cite {
  font-style: normal
}

a[href^=mailto\:]:before {
  content: "📧 "
}

a[href^=tel\:]:before {
  content: "📞 "
}

a[href^=sms\:]:before {
  content: "💬 "
}

mark {
  background-color: #ff0;
  background-color: var(--highlight);
  border-radius: 2px;
  padding: 0 2px;
  color: #000
}

@media (prefers-color-scheme:dark) {
  mark {
    background-color: #efdb43;
    background-color: var(--highlight)
  }
}

a>code,
a>strong {
  color: inherit
}

button,
input[type=button],
input[type=checkbox],
input[type=radio],
input[type=range],
input[type=reset],
input[type=submit],
select {
  cursor: pointer
}

input,
select {
  display: block
}

[type=checkbox],
[type=radio] {
  display: initial
}

input {
  color: #1d1d1d;
  color: var(--form-text);
  background-color: #efefef;
  background-color: var(--background);
  font-family: inherit;
  font-size: inherit;
  margin-right: 6px;
  margin-bottom: 6px;
  padding: 10px;
  border: none;
  border-radius: 6px;
  outline: none
}

@media (prefers-color-scheme:dark) {
  input {
    background-color: #161f27;
    background-color: var(--background);
    color: #fff;
    color: var(--form-text)
  }
}

button {
  color: #1d1d1d;
  color: var(--form-text);
  background-color: #efefef;
  background-color: var(--background);
  font-family: inherit;
  font-size: inherit;
  margin-right: 6px;
  margin-bottom: 6px;
  padding: 10px;
  border: none;
  border-radius: 6px;
  outline: none
}

@media (prefers-color-scheme:dark) {
  button {
    background-color: #161f27;
    background-color: var(--background);
    color: #fff;
    color: var(--form-text)
  }
}

textarea {
  color: #1d1d1d;
  color: var(--form-text);
  background-color: #efefef;
  background-color: var(--background);
  font-family: inherit;
  font-size: inherit;
  margin-right: 6px;
  margin-bottom: 6px;
  padding: 10px;
  border: none;
  border-radius: 6px;
  outline: none
}

@media (prefers-color-scheme:dark) {
  textarea {
    background-color: #161f27;
    background-color: var(--background);
    color: #fff;
    color: var(--form-text)
  }
}

select {
  color: #1d1d1d;
  color: var(--form-text);
  background-color: #efefef;
  background-color: var(--background);
  font-family: inherit;
  font-size: inherit;
  margin-right: 6px;
  margin-bottom: 6px;
  padding: 10px;
  border: none;
  border-radius: 6px;
  outline: none
}

@media (prefers-color-scheme:dark) {
  select {
    background-color: #161f27;
    background-color: var(--background);
    color: #fff;
    color: var(--form-text)
  }
}

button {
  background-color: #d0cfcf;
  background-color: var(--button-base);
  padding-right: 30px;
  padding-left: 30px
}

@media (prefers-color-scheme:dark) {
  button {
    background-color: #0c151c;
    background-color: var(--button-base)
  }
}

input[type=submit] {
  background-color: #d0cfcf;
  background-color: var(--button-base);
  padding-right: 30px;
  padding-left: 30px
}

@media (prefers-color-scheme:dark) {
  input[type=submit] {
    background-color: #0c151c;
    background-color: var(--button-base)
  }
}

input[type=reset] {
  background-color: #d0cfcf;
  background-color: var(--button-base);
  padding-right: 30px;
  padding-left: 30px
}

@media (prefers-color-scheme:dark) {
  input[type=reset] {
    background-color: #0c151c;
    background-color: var(--button-base)
  }
}

input[type=button] {
  background-color: #d0cfcf;
  background-color: var(--button-base);
  padding-right: 30px;
  padding-left: 30px
}

@media (prefers-color-scheme:dark) {
  input[type=button] {
    background-color: #0c151c;
    background-color: var(--button-base)
  }
}

button:hover {
  background: #9b9b9b;
  background: var(--button-hover)
}

@media (prefers-color-scheme:dark) {
  button:hover {
    background: #040a0f;
    background: var(--button-hover)
  }
}

input[type=submit]:hover {
  background: #9b9b9b;
  background: var(--button-hover)
}

@media (prefers-color-scheme:dark) {
  input[type=submit]:hover {
    background: #040a0f;
    background: var(--button-hover)
  }
}

input[type=reset]:hover {
  background: #9b9b9b;
  background: var(--button-hover)
}

@media (prefers-color-scheme:dark) {
  input[type=reset]:hover {
    background: #040a0f;
    background: var(--button-hover)
  }
}

input[type=button]:hover {
  background: #9b9b9b;
  background: var(--button-hover)
}

@media (prefers-color-scheme:dark) {
  input[type=button]:hover {
    background: #040a0f;
    background: var(--button-hover)
  }
}
/* ... */

